fix: remove gaps in flex items

--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -66,32 +66,25 @@
 }
   
 #portfolio {
-    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    gap: 1em;
 }
   
 .portfolio-container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
   
 .portfolio-container-item {
-    width: calc(100% / 4);
-    height: calc(100% / 4);
-    display: flex;
-    justify-content: center;
-    align-items: center;
     cursor: pointer;
 }
   
 .portfolio-container-item img {
-    background-color: #fff;
-    width: 100%;
-    height: 100%; 
-    object-fit: contain;
+    vertical-align: middle;
 }
 
 .name-form {
@@ -121,6 +114,3 @@
     max-width: 100px;
 }
   
-#portfolio {
-    min-height: 500px;
-}
